Info: Commit messages will now be in English Enable different behaviors for the webfilter. Webfilter can now either write to output stream directly or redirect to the versioned web jars. Behavior can be controlled using web init parameters.

--- a/java-ee-7/src/main/webapp/index.html
+++ b/java-ee-7/src/main/webapp/index.html
@@ -13,10 +13,10 @@
         <span aria-hidden="true">&times;</span>
     </button>
 </div>
-
+<!--
 <div class="mt-5 text-center">
     Hello Wildfly
-</div>
+</div>-->
 
 <script src="/webjars/jquery/jquery.min.js"></script>
 <script src="/webjars/popper.js/popper.min.js"></script>
